--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,8 @@ h1, h2, li {
 }
 
 img {
-	height: 190px;
-	width: 190px;
+	max-height: 190px;
+	max-width: 190px;
 }
 
 .keepTrack {
@@ -53,4 +53,8 @@ li {
 	color: #4b6682;
 	font-size: 24px;
 	margin-bottom: 24px;
+}
+
+.margin-top {
+	margin-top: 30px;
 }
